# leakwall

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LEARNING.md  LICENSE  aegis.toml.example  index.html  install.ps1  install.sh  leakwall.toml.example
.github/workflows/: ci.yml  release.yml
Formula/: leakwall.rb
crates/aegis-behavior/: Cargo.toml
crates/aegis-behavior/src/: allowlist.rs  lib.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: cmd_report.rs  cmd_run.rs  cmd_scan.rs  cmd_watch.rs  config.rs  main.rs
crates/aegis-mcp/: Cargo.toml
crates/aegis-mcp/src/: analyze.rs  connect.rs  cross_origin.rs  cve.rs  discover.rs  hashpin.rs  lib.rs  registry.rs
crates/aegis-proxy/: Cargo.toml
crates/aegis-proxy/src/: ca.rs  intercept.rs  lib.rs  process.rs  proxy.rs  redact.rs
crates/aegis-report/: Cargo.toml
crates/aegis-report/src/: cost.rs  html.rs  sarif.rs  trend.rs
crates/aegis-report/templates/: report.html
crates/aegis-secrets/: Cargo.toml
crates/aegis-secrets/src/: discovery.rs  lib.rs  patterns.rs  scanner.rs
crates/aegis-skills/: Cargo.toml
crates/aegis-skills/src/: analyze.rs  discover.rs
crates/aegis-stdio/: Cargo.toml
crates/aegis-stdio/src/: lib.rs  pipe.rs
crates/aegis-tui/: Cargo.toml
crates/aegis-tui/src/: dashboard.rs  events.rs  report.rs
crates/aegis-watch/: Cargo.toml
crates/aegis-watch/src/: daemon.rs  lib.rs  mcp_monitor.rs  notifier.rs  secret_monitor.rs  skills_monitor.rs  watcher.rs
crates/leakwall-behavior/: Cargo.toml
crates/leakwall-behavior/src/: allowlist.rs  data_shape.rs  lib.rs  profile.rs
crates/leakwall-cli/: Cargo.toml
crates/leakwall-cli/src/: cmd_monitor.rs  cmd_report.rs  cmd_run.rs  cmd_scan.rs  cmd_watch.rs  config.rs  main.rs
crates/leakwall-mcp/: Cargo.toml
crates/leakwall-mcp/src/: analyze.rs  command_analysis.rs  connect.rs  cross_origin.rs  cve.rs  discover.rs  hashpin.rs  lib.rs  registry.rs
crates/leakwall-proxy/: Cargo.toml
crates/leakwall-proxy/src/: ca.rs  intercept.rs  lib.rs  process.rs  proxy.rs  redact.rs  stream.rs
crates/leakwall-report/: Cargo.toml
crates/leakwall-report/src/: cost.rs  html.rs  json.rs  lib.rs  sarif.rs  trend.rs
crates/leakwall-report/templates/: report.html  styles.css
crates/leakwall-secrets/: Cargo.toml
crates/leakwall-secrets/src/: discovery.rs  fingerprint.rs  lib.rs  patterns.rs  scanner.rs
crates/leakwall-skills/: Cargo.toml
crates/leakwall-skills/src/: analyze.rs  discover.rs  lib.rs  parser.rs
crates/leakwall-stdio/: Cargo.toml
crates/leakwall-stdio/src/: jsonrpc.rs  lib.rs  pipe.rs
crates/leakwall-tui/: Cargo.toml
crates/leakwall-tui/src/: dashboard.rs  events.rs  lib.rs  monitor.rs  report.rs
crates/leakwall-watch/: Cargo.toml
crates/leakwall-watch/src/: daemon.rs  lib.rs  mcp_monitor.rs  notifier.rs  secret_monitor.rs  skills_monitor.rs  watcher.rs
data/: cve_cache.json  patterns.toml
deb/dists/stable/: Release
deb/dists/stable/main/binary-amd64/: Packages
deb/dists/stable/main/binary-arm64/: Packages
deb/pool/: leakwall_0.1.0-1_amd64.deb  leakwall_0.1.0-1_arm64.deb
new-debs/: leakwall_0.1.0-1_amd64.deb  leakwall_0.1.0-1_arm64.deb
tests/fixtures/sample_mcp_configs/: claude_code_mcp.json
tests/fixtures/sample_requests/: anthropic_request.json
