[package]
name = "aegis-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis — AI agent security platform CLI"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-secrets = { path = "../aegis-secrets" }
aegis-mcp = { path = "../aegis-mcp" }
aegis-proxy = { path = "../aegis-proxy" }
aegis-tui = { path = "../aegis-tui" }
aegis-skills = { path = "../aegis-skills" }
aegis-watch = { path = "../aegis-watch" }
aegis-behavior = { path = "../aegis-behavior" }
aegis-report = { path = "../aegis-report" }
aegis-stdio = { path = "../aegis-stdio" }

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
colored.workspace = true
dashmap.workspace = true
reqwest.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
