[package]
name = "aegis-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server discovery, auditing, and registry integration"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
uuid.workspace = true
fs2 = "0.4"

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio.workspace = true
