[package]
name = "aegis-report"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Advanced reporting: HTML, SARIF, cost tracking, and trend analysis"

[dependencies]
tera.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
