[package]
name = "aegis-secrets"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Secret discovery, fingerprinting, and scanning engine"

[dependencies]
aho-corasick.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
urlencoding.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true

