[package]
name = "aegis-stdio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP stdio transport interception and JSON-RPC message parsing"

[dependencies]
aegis-secrets = { path = "../aegis-secrets" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
