[package]
name = "aegis-watch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon mode with file system watchers, IPC, and desktop notifications"

[dependencies]
aegis-mcp = { path = "../aegis-mcp" }
aegis-secrets = { path = "../aegis-secrets" }
aegis-skills = { path = "../aegis-skills" }

notify.workspace = true
notify-debouncer-full.workspace = true
notify-rust.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true
chrono.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
