[package]
name = "leakwall-behavior"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Behavioral anomaly detection: destination profiling, volume tracking, entropy analysis"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
