[package]
name = "leakwall"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AI agent security platform — protect coding agents from secret leaks, tool poisoning, and behavioral anomalies"

[[bin]]
name = "leakwall"
path = "src/main.rs"

[dependencies]
leakwall-secrets = { path = "../leakwall-secrets" }
leakwall-mcp = { path = "../leakwall-mcp" }
leakwall-proxy = { path = "../leakwall-proxy" }
leakwall-tui = { path = "../leakwall-tui" }
leakwall-skills = { path = "../leakwall-skills" }
leakwall-watch = { path = "../leakwall-watch" }
leakwall-behavior = { path = "../leakwall-behavior" }
leakwall-report = { path = "../leakwall-report" }
leakwall-stdio = { path = "../leakwall-stdio" }

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
colored.workspace = true
dashmap.workspace = true
reqwest.workspace = true
zeroize.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[package.metadata.deb]
name = "leakwall"
maintainer = "Kranium2002 <kranium2002@users.noreply.github.com>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/leakwall", "usr/bin/", "755"],
    ["../../data/patterns.toml", "usr/share/leakwall/patterns.toml", "644"],
]
extended-description = """LeakWall protects developers from AI coding agent security failures.
It scans MCP servers for vulnerabilities, intercepts outbound API requests
to redact leaked secrets, monitors filesystem changes, and generates
security reports."""
