[package]
name = "leakwall-proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MITM TLS proxy with secret scanning and redaction"

[dependencies]
leakwall-secrets = { path = "../leakwall-secrets" }

hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
time.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
zeroize.workspace = true
uuid.workspace = true
reqwest.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
subtle.workspace = true

[dev-dependencies]
tempfile.workspace = true
