[package]
name = "leakwall-skills"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent skill file discovery, parsing, and security analysis"

[dependencies]
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
base64.workspace = true
regex.workspace = true
tracing.workspace = true
thiserror.workspace = true
dirs.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
