[package]
name = "leakwall-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI dashboard for leakwall proxy"

[dependencies]
leakwall-proxy = { path = "../leakwall-proxy" }

ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
